--- a/modul-01-02/index.html
+++ b/modul-01-02/index.html
@@ -7,14 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-
+    <header>
+<nav>
     <ul>
        <li><a href="#lifestyle">lifestyle</a></li>
        <li><a href="#photodiary">photodiary</a></li>
        <li><a href="#music">music</a></li>
        <li><a href="#travel">travel</a></li> 
     </ul>
-
+</nav>
+</header>
+<main>
     <article id="lifestyle">
         <img src="./img/image.png" alt="lifestyle">
         <div><span>Lifestyle</span></div>
@@ -62,5 +65,6 @@
             dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
     </article>
     <button>Load more</button>
+</main>
 </body>
 </html>
