--- a/modul-01-02/index.html
+++ b/modul-01-02/index.html
@@ -18,6 +18,7 @@
 </nav>
 </header>
 <main>
+    <section>
     <article id="lifestyle">
         <img src="./img/image.png" alt="lifestyle">
         <div><span>Lifestyle</span></div>
@@ -64,6 +65,7 @@
             quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia 
             dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
     </article>
+    </section>
     <button>Load more</button>
 </main>
 </body>
