--- a/html-css/modul-3/index.html
+++ b/html-css/modul-3/index.html
@@ -93,12 +93,11 @@
                         laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit 
                         aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
                         consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
-                </article>
-                <article><button><a href="#" >Learn more</a></button></article>
-               
+                </article>     
             </section>
-        </main>
-
-    
+            <div class="button">
+                <button><a href="#" >Learn more</a></button>
+            </div>
+        </main>   
 </body>
 </html>
