--- a/html-css/modul-3/index.html
+++ b/html-css/modul-3/index.html
@@ -27,10 +27,8 @@
         <main>
             <section class="main_b">
                 <article class="block">
-                    <div class="image"><img src="./img/image.png" alt="lifestyle"></div>
-                    <div>
-                        <p class="titl">Lifestyle</p>
-                    </div>
+                    <img src="./img/image.png" alt="lifestyle" class="image">
+                    <p class="titl">Lifestyle</p>
                     <h2 class="head">More than just a music festival </h2>
                     <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -47,10 +45,8 @@
                         incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
                 </article>
                 <article class="block">
-                    <div class="image"><img src="./img/image2.jpg" alt="lifestyle"></div>
-                    <div>
-                        <p class="titl">Lifestyle</p>
-                    </div>
+                    <img src="./img/image2.jpg" alt="lifestyle" class="image">
+                    <p class="titl">Lifestyle</p>
                     <h2 class="head">Life tastes better with coffee</h2>
                     <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -67,10 +63,8 @@
                         et dolore magnam aliquam quaerat voluptatem.</p>
                 </article>
                 <article class="block">
-                    <div class="image"><img src="./img/image3.jpg" alt="photodiary"></div>
-                    <div>
-                        <p class="titl">Photodiary</p>
-                    </div>
+                    <img src="./img/image3.jpg" alt="photodiary" class="image">
+                    <p class="titl">Photodiary</p>
                     <h2 class="head">American dream</h2>
                     <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -86,29 +80,30 @@
                         magnam aliquam quaerat voluptatem.</p>
                 </article>
                 <article class="block">
-                    <div class="image"><img src="./img/image4.jpg" alt="photodiary"></div>
-                    <div>
-                        <p class="titl">Photodiary</p>
-                    </div>
-                    <h2 class="head">A day exploring the Alps</h2>
-                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                        id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                        accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
-                        veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem
-                        quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui
-                        ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia
-                        dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut
-                        labore et dolore magnam aliquam quaerat voluptatem.</p>
+                    <img src="./img/image4.jpg" alt="photodiary" class="image">
+                    <p class="titl">Photodiary</p>
+
+                        <h2 class="head">A day exploring the Alps</h2>
+                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                            in
+                            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                            anim
+                            id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                            accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
+                            veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem
+                            quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui
+                            ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia
+                            dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt
+                            ut
+                            labore et dolore magnam aliquam quaerat voluptatem.</p>
                 </article>
                 <article class="block">
-                    <div class="image"><img src="./img/image5.jpg" alt="lifestyle"></div>
-                    <div>
-                        <p class="titl">Lifestyle</p>
-                    </div>
+                    <img src="./img/image5.jpg" alt="lifestyle" class="image">
+                    <p class="titl">Lifestyle</p>
+
                     <h2 class="head">Top 10 song for running</h2>
                     <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
@@ -124,10 +119,8 @@
                         et dolore magnam aliquam quaerat voluptatem.</p>
                 </article>
                 <article class="block">
-                    <div class="image"><img src="./img/image6.jpg" alt="lifestyle"></div>
-                    <div>
-                        <p class="titl">Lifestyle</p>
-                    </div>
+                    <img src="./img/image6.jpg" alt="lifestyle" class="image">
+                    <p class="titl">Lifestyle</p>
                     <h2 class="head">Cold winter days</h2>
                     <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
