--- a/html-css/modul-03/index.html
+++ b/html-css/modul-03/index.html
@@ -136,7 +136,7 @@
                         magnam aliquam quaerat voluptatem.</p>
                 </article>
                 
-                    <button id="b">Learn more</button>
+                    <button class="button">Learn more</button>
                 
             </section>
         </main>
