--- a/html-css/modul-04/index.html
+++ b/html-css/modul-04/index.html
@@ -16,24 +16,24 @@
                 <a href="#" class="logo">mart</a>
             </h1>
             
-            <ul class="manu">
-                <li class="manu-item">
-                    <a href="#" class="manu-link">Home</a>
+            <ul class="menu">
+                <li class="menu-item">
+                    <a href="#" class="menu-link">Home</a>
                 </li>
-                <li class="manu-item">
-                    <a href="#" class="manu-link">About Us</a>
+                <li class="menu-item">
+                    <a href="#" class="menu-link">About Us</a>
                 </li>
-                <li class="manu-item">
-                    <a href="#" class="manu-link">page</a>
+                <li class="menu-item">
+                    <a href="#" class="menu-link">page</a>
                 </li>
-                <li class="manu-item">
-                    <a href="#products-shop" class="manu-link">shop</a>
+                <li class="menu-item">
+                    <a href="#products-shop" class="menu-link">shop</a>
                 </li>
-                <li class="manu-item">
-                    <a href="#blog-news" class="manu-link">Blog</a>
+                <li class="menu-item">
+                    <a href="#blog-news" class="menu-link">Blog</a>
                 </li>
-                <li class="manu-item">
-                    <a href="#" class="manu-link">CONTACT US</a>
+                <li class="menu-item">
+                    <a href="#" class="menu-link">CONTACT US</a>
                 </li>
             </ul>
         </nav>
@@ -94,19 +94,19 @@
         <img src="img/ipad-632394_960_720.png" alt="Bog1" class="new-img">
         <p class="title-news">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean </p>
         <p class="content-news">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare </p>
-        <div class="but"><button class="news-button">Read More</button></div>
+        <a href="#" class="but"><button class="news-button">Read More</button></a>
     </li>
     <li class="news-list-item">
         <img src="img/slide1.png" alt="Bog2" class="new-img">
         <p class="title-news">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean </p>
         <p class="content-news">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare </p>
-        <div class="but"><button class="news-button">Read More</button></div>
+        <a href="#" class="but"><button class="news-button">Read More</button></a>
     </li>
     <li class="news-list-item">
         <img src="img/product-img-5.png" alt="Bog3" class="new-img">
         <p class="title-news">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean </p>
         <p class="content-news">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare </p>
-        <div class="but"><button class="news-button">Read More</button></div>
+        <a href="#" class="but"><button class="news-button">Read More</button></a>
     </li>
 </ul>
 
