--- a/html-css/modul-04/index.html
+++ b/html-css/modul-04/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,15 +10,16 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap: 400, 600, 700" rel="stylesheet">
 </head>
+
 <body>
     <header class="main-header content">
         <nav class="header-nav">
             <h1 class="site-logo">
                 <a href="#" class="logo">mart</a>
             </h1>
-            
+
             <ul class="menu">
-                <li class="menu-item">
+                <li class="menu-item clearfix">
                     <a href="#" class="menu-link">Home</a>
                 </li>
                 <li class="menu-item">
@@ -40,79 +42,101 @@
     </header>
     <main class="main-content content">
         <section class="products">
-<h2 class="title-prod" id="products-shop">FEATURED PRODUCTS</h2>
+            <h2 class="title-prod" id="products-shop">FEATURED PRODUCTS</h2>
 
-<ul class="prod-list">
-    <li class="prod-list-item">
-        <img src="img/product1.png" alt="Blue Tshirt" class="prod-img">
-        <p class="prod-name">Blue Tshirt</p>
-        <p class="prod-many">$26</p>
-    </li>
-    <li class="prod-list-item">
-        <img src="img/product2.png" alt="WOMAN shirt" class="prod-img">
-        <p class="prod-name">WOMAN shirt</p>
-        <p class="prod-many">$31</p>
-    </li>
-    <li class="prod-list-item">
-        <img src="img/product9.png" alt="YELLOW Tshirt" class="prod-img">
-        <p class="prod-name">YELLOW Tshirt</p>
-        <p class="prod-many">$21</p>
-    </li>
-    <li class="prod-list-item">
-        <img src="img/product4.png" alt="Cool lingerie" class="prod-img">
-        <p class="prod-name">Cool lingerie</p>
-        <p class="prod-many">$56</p>
-    </li>
-    <li class="prod-list-item">
-        <img src="img/product3.png" alt="Blue Tshirt" class="prod-img">
-        <p class="prod-name">Blue Tshirt</p>
-        <p class="prod-many">$26</p>
-    </li>
-    <li class="prod-list-item">
-        <img src="img/product5.png" alt="WOMAN shirt" class="prod-img">
-        <p class="prod-name">WOMAN shirt</p>
-        <p class="prod-many">$31</p>
-    </li>
-    <li class="prod-list-item">
-        <img src="img/product6.png" alt="YELLOW Tshirt" class="prod-img">
-        <p class="prod-name">YELLOW Tshirt</p>
-        <p class="prod-many">$21</p>
-    </li>
-    <li class="prod-list-item">
-        <img src="img/product8.png" alt="Cool lingerie" class="prod-img">
-        <p class="prod-name">Cool lingerie</p>
-        <p class="prod-many">$56</p>
-    </li>
-</ul>
+            <ul class="prod-list clearfix">
+                <li class="prod-list-item ">
+                    <a href="#" class="prod">
+                        <img src="img/product1.png" alt="Blue Tshirt" class="prod-img">
+                        <p class="prod-name">Blue Tshirt</p>
+                        <p class="prod-many">$26</p>
+                    </a>
+                </li>
+                <li class="prod-list-item">
+                    <a href="#" class="prod">
+                        <img src="img/product2.png" alt="WOMAN shirt" class="prod-img">
+                        <p class="prod-name">WOMAN shirt</p>
+                        <p class="prod-many">$31</p>
+                    </a>
+                </li>
+                <li class="prod-list-item">
+                    <a href="#" class="prod">
+                        <img src="img/product9.png" alt="YELLOW Tshirt" class="prod-img">
+                        <p class="prod-name">YELLOW Tshirt</p>
+                        <p class="prod-many">$21</p>
+                    </a>
+                </li>
+                <li class="prod-list-item">
+                    <a href="#" class="prod">
+                        <img src="img/product4.png" alt="Cool lingerie" class="prod-img">
+                        <p class="prod-name">Cool lingerie</p>
+                        <p class="prod-many">$56</p>
+                </li>
+                <li class="prod-list-item">
+                    <a href="#" class="prod">
+                        <img src="img/product3.png" alt="Blue Tshirt" class="prod-img">
+                        <p class="prod-name">Blue Tshirt</p>
+                        <p class="prod-many">$26</p>
+                    </a>
+                </li>
+                <li class="prod-list-item">
+                    <a href="#" class="prod">
+                        <img src="img/product5.png" alt="WOMAN shirt" class="prod-img">
+                        <p class="prod-name">WOMAN shirt</p>
+                        <p class="prod-many">$31</p>
+                    </a>
+                </li>
+                <li class="prod-list-item">
+                    <a href="#" class="prod">
+                        <img src="img/product6.png" alt="YELLOW Tshirt" class="prod-img">
+                        <p class="prod-name">YELLOW Tshirt</p>
+                        <p class="prod-many">$21</p>
+                    </a>
+                </li>
+                <li class="prod-list-item">
+                    <a href="#" class="prod">
+                        <img src="img/product8.png" alt="Cool lingerie" class="prod-img">
+                        <p class="prod-name">Cool lingerie</p>
+                        <p class="prod-many">$56</p>
+                    </a>
+                </li>
+            </ul>
 
 
         </section>
         <section class="news">
             <h2 class="yiyle-news" id="blog-news">LATEST NEWS</h2>
-<ul class="news-list">
-    <li class="news-list-item">
-        <img src="img/ipad-632394_960_720.png" alt="Bog1" class="new-img">
-        <p class="title-news">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean </p>
-        <p class="content-news">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare </p>
-        <a href="#" class="but"><button class="news-button">Read More</button></a>
-    </li>
-    <li class="news-list-item">
-        <img src="img/slide1.png" alt="Bog2" class="new-img">
-        <p class="title-news">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean </p>
-        <p class="content-news">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare </p>
-        <a href="#" class="but"><button class="news-button">Read More</button></a>
-    </li>
-    <li class="news-list-item">
-        <img src="img/product-img-5.png" alt="Bog3" class="new-img">
-        <p class="title-news">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean </p>
-        <p class="content-news">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare </p>
-        <a href="#" class="but"><button class="news-button">Read More</button></a>
-    </li>
-</ul>
+            <ul class="news-list clearfix">
+                <li class="news-list-item">
+                    <img src="img/ipad-632394_960_720.png" alt="Bog1" class="new-img">
+                    <p class="title-news">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean </p>
+                    <p class="content-news">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate
+                        cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a
+                        ornare </p>
+                    <a href="#" class="but">Read More</a>
+                </li>
+                <li class="news-list-item">
+                    <img src="img/slide1.png" alt="Bog2" class="new-img">
+                    <p class="title-news">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean </p>
+                    <p class="content-news">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate
+                        cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a
+                        ornare </p>
+                    <a href="#" class="but">Read More</a>
+                </li>
+                <li class="news-list-item">
+                    <img src="img/product-img-5.png" alt="Bog3" class="new-img">
+                    <p class="title-news">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean </p>
+                    <p class="content-news">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate
+                        cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a
+                        ornare </p>
+                    <a href="#" class="but">Read More</a>
+                </li>
+            </ul>
 
         </section>
 
     </main>
-    
+
 </body>
+
 </html>
