--- a/html-css/modul-05/index.html
+++ b/html-css/modul-05/index.html
@@ -33,17 +33,12 @@
     <div class="banner">
 
         <div class="provisions">
-            <button class="banner-ctrl banner-prev">
-                <img src="../modul-05/img/l.png" alt="">
-            </button>
+            <button class="banner-ctrl banner-prev"></button>
             <div class="p-text">
                 <h1 class="titl-ban">AFFORDABLE PARIS TOURS</h1>
                 <p class="text-titl">CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
             </div>
-            <button class="banner-ctrl banner-next">
-                <img src="../modul-05/img/r.png" alt="">
-            
-                </button>
+            <button class="banner-ctrl banner-next"></button>
         </div>
     </div>
 
@@ -60,16 +55,12 @@
                     <p class="many">$26</p>
                 </a>
 
-        
-
-
-
                 <div class="box-lining">
                     <div class="box">
-                        <button class="butt"><img src="img/1.png" alt="" class="butt-img"></button>
-                        <button class="butt"><img src="img/2.png" alt="" class="butt-img"></button>
-                        <button class="butt"><img src="img/3.png" alt="" class="butt-img"></button>
-                        <button class="buttons"><img src="img/4.png" alt="" class="butt-img"><span class="text-butt">add to cart</span></button>
+                        <button class="butt like"></button>
+                        <button class="butt shuffle"></button>
+                        <button class="butt clock"></button>
+                        <button class="buttons"><span class="text-butt">add to cart</span></button>
 
                     </div>
                 </div>
@@ -84,45 +75,40 @@
                 </a>
                 <div class="box-lining">
                     <div class="box">
-                        <button class="butt"><img src="img/1.png" alt="" class="butt-img"></button>
-                        <button class="butt"><img src="img/2.png" alt="" class="butt-img"></button>
-                        <button class="butt"><img src="img/3.png" alt="" class="butt-img"></button>
-                        <button class="buttons"><img src="img/4.png" alt="" class="butt-img"><span class="text-butt">add to cart</span></button>
-
+                        <button class="butt like"></button>
+                        <button class="butt shuffle"></button>
+                        <button class="butt clock"></button>
+                        <button class="buttons"><span class="text-butt">add to cart</span></button>
                     </div>
                 </div>
             </li>
             <li class="list"><a href="#" class="time">
                     <img src="img/category-4.png" alt="" class="img">
-
                     <p class="name">YELLOW Tshirt</p>
                     <p class="many">$21 </p>
 
                 </a>
                 <div class="box-lining">
                     <div class="box">
-                        <button class="butt"><img src="img/1.png" alt="" class="butt-img"></button>
-                        <button class="butt"><img src="img/2.png" alt="" class="butt-img"></button>
-                        <button class="butt"><img src="img/3.png" alt="" class="butt-img"></button>
-                        <button class="buttons"><img src="img/4.png" alt="" class="butt-img"><span class="text-butt">add to cart</span></button>
-
+                        <button class="butt like"></button>
+                        <button class="butt shuffle"></button>
+                        <button class="butt clock"></button>
+                        <button class="buttons"><span class="text-butt">add to cart</span></button>
                     </div>
                 </div>
             </li>
             <li class="list"><a href="#" class="time">
                     <img src="img/category-3.png" alt="" class="img">
-
                     <p class="name">Cool lingerie</p>
                     <p class="many">$56</p>
 
                 </a>
                 <div class="box-lining">
                     <div class="box">
-                        <button class="butt"><img src="img/1.png" alt="" class="butt-img"></button>
-                        <button class="butt"><img src="img/2.png" alt="" class="butt-img"></button>
-                        <button class="butt"><img src="img/3.png" alt="" class="butt-img"></button>
-                        <button class="buttons"><img src="img/4.png" alt="" class="butt-img"><span class="text-butt">add to cart</span></button>
-
+                        <button class="butt like"></button>
+                        <button class="butt shuffle"></button>
+                        <button class="butt clock"></button>
+                        <button class="buttons"><span class="text-butt">add to cart</span></button>
                     </div>
                 </div>
             </li>
