--- a/html-css/modul-04/index.html
+++ b/html-css/modul-04/index.html
@@ -8,18 +8,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap: 400, 600, 700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap:400,600,700" rel="stylesheet">
 </head>
 
 <body>
     <header class="main-header content">
-        <nav class="header-nav">
+        <nav class="header-nav clearfix">
             <h1 class="site-logo">
                 <a href="#" class="logo">mart</a>
             </h1>
 
             <ul class="menu">
-                <li class="menu-item clearfix">
+                <li class="menu-item">
                     <a href="#" class="menu-link">Home</a>
                 </li>
                 <li class="menu-item">
@@ -71,6 +71,7 @@
                         <img src="img/product4.png" alt="Cool lingerie" class="prod-img">
                         <p class="prod-name">Cool lingerie</p>
                         <p class="prod-many">$56</p>
+                    </a>
                 </li>
                 <li class="prod-list-item">
                     <a href="#" class="prod">
