--- a/html-css/modul-06/index.html
+++ b/html-css/modul-06/index.html
@@ -110,7 +110,7 @@
     
         <p class="foot-data">© 2016 MoGo free PSD template by <a href="#" class="lo">Laaqiq</a></p>
    
-        <input class="form" name="email..." value="Your Email...">     
+        <input class="form" type ="search" placeholder="Your Email...">     
         <button class="subscribe">Subscribe</button>   
     </footer>
 
