--- a/html-css/modul-06/index.html
+++ b/html-css/modul-06/index.html
@@ -64,45 +64,45 @@
                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                 laboris nisi ut aliquip ex ea commodo consequat. </p>
 
-            <article class="table">
+            <figure class="table">
                 <div class="warp">
                     <img src="../modul-06/img/Layer 17.png" alt="" class="poster">
-                    <div class="butt">
-                        <a href="#" class="so twitter"></a>
-                        <a href="#" class="so pinterest"></a>
-                        <a href="#" class="so instagram"></a>
-                        <a href="#" class="so facebook"></a>
-                    </div>
+                    <ul class="butt">
+                        <li class="butt-li"><a href="#" class="so twitter"></a></li>
+                        <li class="butt-li"><a href="#" class="so pinterest"></a></li>
+                        <li class="butt-li"><a href="#" class="so instagram"></a></li>
+                        <li class="butt-li"><a href="#" class="so facebook"></a></li>
+                    </ul>
                 </div>
                 <p class="name-time">Matthew Dix</p>
                 <p class="profes">Graphic Design</p>
-            </article>
-            <article class="table">
+            </figure>
+            <figure class="table">
                 <div class="warp">
                     <img src="../modul-06/img/Layer 18.png" alt="" class="poster">
-                    <div class="butt">
-                        <a href="#" class="so twitter"></a>
-                        <a href="#" class="so pinterest"></a>
-                        <a href="#" class="so instagram"></a>
-                        <a href="#" class="so facebook"></a>
-                    </div>
+                    <ul class="butt">
+                        <li class="butt-li"><a href="#" class="so twitter"></a></li>
+                        <li class="butt-li"><a href="#" class="so pinterest"></a></li>
+                        <li class="butt-li"><a href="#" class="so instagram"></a></li>
+                        <li class="butt-li"><a href="#" class="so facebook"></a></li>
+                    </ul>
                 </div>
                 <p class="name-time">Christopher Campbell</p>
                 <p class="profes">Branding/UX design</p>
-            </article>
-            <article class="table">
+            </figure>
+            <figure class="table">
                 <div class="warp">
                     <img src="../modul-06/img/Layer 19.png" alt="" class="poster">
-                    <div class="butt">
-                        <a href="#" class="so twitter"></a>
-                        <a href="#" class="so pinterest"></a>
-                        <a href="#" class="so instagram"></a>
-                        <a href="#" class="so facebook"></a>
-                    </div>
+                    <ul class="butt">
+                        <li class="butt-li"><a href="#" class="so twitter"></a></li>
+                        <li class="butt-li"><a href="#" class="so pinterest"></a></li>
+                        <li class="butt-li"><a href="#" class="so instagram"></a></li>
+                        <li class="butt-li"><a href="#" class="so facebook"></a></li>
+                    </ul>
                 </div>
                 <p class="name-time">Michael Fertig </p>
                 <p class="profes">Developer</p>
-            </article>
+            </figure>
         </section>
     </main>
 
@@ -112,7 +112,7 @@
                 <p class="foot-data">© 2016 MoGo free PSD template by <a href="#" class="lo">Laaqiq</a></p>
             
             <div class="foot-text">
-                <input class="form" type="search" placeholder="Your Email...">
+                <input class="form" type="text" placeholder="Your Email...">
                 <button class="subscribe">Subscribe</button>
             </div>
         </div>
