--- a/html-css/modul-07/index.html
+++ b/html-css/modul-07/index.html
@@ -54,12 +54,12 @@
         
             <figure class="form" action="#" method="get">
                 <div class="overlay">
-                    <input type ="text" placeholder="Your Name *" class="input">
-                    <input type="email" placeholder="Your E-mail *" class="input">
+                    <input type ="text" placeholder="Your Name *" class="input" required>
+                    <input type="email" placeholder="Your E-mail *" class="input" required>
                     <input type="text" placeholder="Subject" class="input">
                 </div>
                 <div class="sidebar">
-                    <textarea name = "comments" placeholder="Your Message *" class="input-text"></textarea>
+                    <textarea name = "comments" placeholder="Your Message *" class="input-text" required></textarea>
                 </div>
                 <input type="button" value = "Send Message" class="button">
             </figure>
