--- a/html-css/modul-06/index.html
+++ b/html-css/modul-06/index.html
@@ -66,7 +66,7 @@
 
             <figure class="table">
                 <div class="warp">
-                    <img src="../modul-06/img/Layer 17.png" alt="" class="poster">
+                    <img src="../modul-06/img/Layer17.png" alt="" class="poster">
                     <ul class="butt">
                         <li class="butt-li"><a href="#" class="so twitter"></a></li>
                         <li class="butt-li"><a href="#" class="so pinterest"></a></li>
@@ -79,7 +79,7 @@
             </figure>
             <figure class="table">
                 <div class="warp">
-                    <img src="../modul-06/img/Layer 18.png" alt="" class="poster">
+                    <img src="../modul-06/img/Layer18.png" alt="" class="poster">
                     <ul class="butt">
                         <li class="butt-li"><a href="#" class="so twitter"></a></li>
                         <li class="butt-li"><a href="#" class="so pinterest"></a></li>
@@ -92,7 +92,7 @@
             </figure>
             <figure class="table">
                 <div class="warp">
-                    <img src="../modul-06/img/Layer 19.png" alt="" class="poster">
+                    <img src="../modul-06/img/Layer19.png" alt="" class="poster">
                     <ul class="butt">
                         <li class="butt-li"><a href="#" class="so twitter"></a></li>
                         <li class="butt-li"><a href="#" class="so pinterest"></a></li>
@@ -111,10 +111,10 @@
            
                 <p class="foot-data">© 2016 MoGo free PSD template by <a href="#" class="lo">Laaqiq</a></p>
             
-            <div class="foot-text">
+            <form class="foot-text">
                 <input class="form" type="text" placeholder="Your Email...">
                 <button class="subscribe">Subscribe</button>
-            </div>
+            </form>
         </div>
     </footer>
 
