--- a/html-css/modul-06/index.html
+++ b/html-css/modul-06/index.html
@@ -18,8 +18,8 @@
             <a href="#" class="logo">MoGo</a>
             <ul class="menu-list">
                 <li class="menu-name"><a href="#" class="menu-item">About</a></li>
-                <li class="menu-name"><a href="#" class="menu-item">service</a></li>
-                <li class="menu-name"><a href="#" class="menu-item">work</a></li>
+                <li class="menu-name"><a href="#services" class="menu-item">service</a></li>
+                <li class="menu-name"><a href="#team" class="menu-item">work</a></li>
                 <li class="menu-name"><a href="#" class="menu-item">blog</a></li>
                 <li class="menu-name"><a href="#" class="menu-item">contact</a></li>
             </ul>
@@ -28,7 +28,7 @@
 
 
     <main class="content-main content">
-        <section class="services">
+        <section class="services" id="services">
             <h2 class="titl-sect">We work with<br><span class="italic">Amazing Services</span></h2>
             <ul class="items">
                 <li class="item-name icon-alarm">
@@ -58,7 +58,7 @@
             </ul>
 
         </section>
-        <section class="team">
+        <section class="team" id="team">
             <h2 class="titl-sect">Who we are<br><span class="italic">Meet our team</span></h2>
             <p class="titl-text-team">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
