--- a/html-css/modul-07/index.html
+++ b/html-css/modul-07/index.html
@@ -49,6 +49,8 @@
         </section>
 
         <section class="main-baner">
+
+            <div class="content">
             <h2 class="title-main title-main-baner">Contact Us</h2>
             <p class="subtitle-main">Proin iaculis purus consequat sem cure.</p>
         
@@ -65,6 +67,7 @@
            
                 <input type="submit" value = "Send Message" class="button">
             </form>
+        </div>
         </section>
     </main>
 </body>
