--- a/html-css/modul-08/index.html
+++ b/html-css/modul-08/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <section class="baner content">
+    <section class="baner">
+        <div class="content">
         <nav class="header-nav">
             <ul class="heaher-nav-name">
                 <li class="header-nav-item"><a href="#" class="header-nav-link">Log in</a></li>
@@ -20,8 +21,9 @@
                 <p class="title-text">Share your holiday dreams</p>
                 <p class="title-text-text">And find the perfect partner to fullfill it</p>
             </div>
-            <button class="header-button">Find your holiday partner</button>
+            <button class="header-button"><a href="#" class="link">Find your holiday partner</a></button>
         </nav>
+    </div>
     </section>
 
     <section class="content">
