--- a/html-css/modul-08/index.html
+++ b/html-css/modul-08/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="../modul-08/css/style.css">
 </head>
@@ -11,24 +12,27 @@
 <body>
     <section class="baner">
         <div class="content">
-        <nav class="header-nav">
-            <ul class="heaher-nav-name">
-                <li class="header-nav-item"><a href="#" class="header-nav-link">Log in</a></li>
-                <li class="header-nav-item"><a href="#" class="header-nav-link">Sign up</a></li>
-            </ul>
-            <div class="header-text">
-                <h2 class="header-title">URLAUBSGLÜCK</h2>
-                <p class="title-text">Share your holiday dreams</p>
-                <p class="title-text-text">And find the perfect partner to fullfill it</p>
-            </div>
-            <button class="header-button"><a href="#" class="link">Find your holiday partner</a></button>
-        </nav>
-    </div>
+            <nav class="header-nav">
+                <ul class="heaher-nav-name">
+                    <li class="header-nav-item"><a href="#" class="header-nav-link">Log in</a></li>
+                    <li class="header-nav-item"><a href="#" class="header-nav-link">Sign up</a></li>
+                </ul>
+                <div class="logo">
+                    <a class="header-title" href="#">URLAUBSGLÜCK</a>
+                </div>
+                </nav>
+                    <div class="header-text">
+                    <p class="title-text">Share your holiday dreams</p>
+                    <p class="title-text-text">And find the perfect partner to fullfill it</p>
+                </div>
+                <a href="#" class="header-button">Find your holiday partner</a>
+            
+        </div>
     </section>
 
     <section class="content">
         <h3 class="title-main">Meet a partner for your best holiday</h3>
-
+<div class="flex">
         <article class="divide">
             <div class="picture icon-shape_1"><img src="../modul-08/img/Layer6.png" alt="picture1" class="pict"></div>
             <h3 class="title-pict">Bradley Hunter</h3>
@@ -53,8 +57,9 @@
             <h3 class="title-pict">Bradley Hunter</h3>
             <p class="pict-text">Based in Chicago. I love playing tennis and loud music.</p>
         </article>
-
+    </div>
         <button class="button-and">See other partners</button>
     </section>
 </body>
+
 </html>
