--- a/html-css/modul-09/index.html
+++ b/html-css/modul-09/index.html
@@ -28,20 +28,18 @@
     </section>
 
     <section class="content">
-        <div class="title-content">
-            <h2 class="title-content__text">Meet a partner for your best holiday</h2>
-        </div>
+            <h2 class="content__title">Meet a partner for your best holiday</h2>
         <div class="body">
             <article class="box">
                 <div class="box__image box__icon-shape_1">
-                    <img src="../modul-08/img/Layer6.png" alt="picture1" class="">
+                    <img src="../modul-08/img/Layer6.png" alt="picture1" class="box_pic">
                 </div>
                 <h3 class="box__title">Bradley Hunter</h3>
                 <p class="box__subtitle">Based in Chicago. I love playing tennis and loud music.</p>
             </article>
             <article class="box">
                 <div class="box__image box__icon-shape_2">
-                    <img src="../modul-08/img/Layer8.png" alt="picture1" class="">
+                    <img src="../modul-08/img/Layer8.png" alt="picture1" class="box_pic">
                 </div>
                 <h3 class="box__title">Lucas Marsha</h3>
                 <p class="box__subtitle">I get my inspiration from nature and objects around me. I have a passion to
@@ -49,14 +47,14 @@
             </article>
             <article class="box">
                 <div class="box__image box__icon-shape_3">
-                    <img src="../modul-08/img/Layer7.png" alt="picture1" class="">
+                    <img src="../modul-08/img/Layer7.png" alt="picture1" class="box_pic">
                 </div>
                 <h3 class="box__title">Heather Walker</h3>
                 <p class="box__subtitle">I'm a happy person that loves cats and climbing on mountains.</p>
             </article>
             <article class="box">
                 <div class="box__image box__icon-shape_4">
-                    <img src="../modul-08/img/Layer10.png" alt="picture1" class="">
+                    <img src="../modul-08/img/Layer10.png" alt="picture1" class="box_pic">
                 </div>
                 <h3 class="box__title">Bradley Hunter</h3>
                 <p class="box__subtitle">Based in Chicago. I love playing tennis and loud music.</p>
